--- a/bin/application/fxml/DailySales.fxml
+++ b/bin/application/fxml/DailySales.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.DailySalesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.DailySalesController">
    <children>
-      <TableView layoutY="70.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="410.0" prefWidth="800.0">
+      <TableView fx:id="table" layoutY="70.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="410.0" prefWidth="800.0">
         <columns>
           <TableColumn fx:id="itemColumn" prefWidth="171.0" text="اسم السلعة" />
           <TableColumn fx:id="quantityColumn" prefWidth="113.0" text="الكمية" />
